test/syntaxerrors/TestStartWithSingleLineComment.jdc
//Comment on first line

println("Hello");